# react-native-nitro-image-pipeline

./: .watchmanconfig  CHANGELOG.md  CLAUDE.md  LICENSE  NitroImagePipeline.podspec  NitroImageToolkit.podspec  PLAN.md  README.md  biome.json  nitro.json  package.json  post-script.js  post-script.ts  release.config.cjs
.github/workflows/: harness-tests.yml  ios-build.yml  release.yml
.zed/: settings.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/nitroimagepipeline/: HybridNitroImagePipeline.kt  NitroImagePipelinePackage.kt
android/src/main/java/com/margelo/nitro/nitroimagepipeline/transform/: BlurTransformation.kt
android/src/main/java/com/margelo/nitro/nitroimagetoolkit/: HybridNitroImageToolkit.kt  NitroImageToolkitPackage.kt
android/src/main/java/com/margelo/nitro/nitroimagetoolkit/transform/: BlurTransformation.kt
android/src/main/java/com/nitroimagetoolkit/: HybridNitroImageToolkit.kt  NitroImageToolkitPackage.kt
example/: .watchmanconfig  App.tsx  app.json  babel.config.js  jest.harness.config.mjs  metro.config.js  package.json  react-native.config.js  rn-harness.config.mjs  tsconfig.json
example/.harness/: manifest.js  setup.ts
example/__tests__/: nitro-image-pipeline.harness.ts  use-image.harness.tsx
example/android/: gradle.properties  settings.gradle
example/ios/: Podfile
ios/: Bridge.h  HybridNitroImagePipeline.swift  HybridNitroImageToolkit.swift
src/: index.ts
src/specs/: nitro-image-toolkit.nitro.ts
(+19 files in other folders)
